--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,22 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkalami&family=Asset&family=Bebas+Neue&family=Bungee+Shade&family=Comforter+Brush&family=Gemunu+Libre&family=Holtwood+One+SC&family=Lobster&family=Merriweather:ital,wght@0,300;0,400;0,900;1,300&family=Pacifico&family=Paytone+One&family=Peralta&family=Poppins:wght@100&family=Rammetto+One&family=Roboto+Condensed&family=Rubik+80s+Fade&family=Rubik+Vinyl&family=Russo+One&family=Silkscreen&family=Teko:wght@300;400&display=swap" rel="stylesheet">
   </head>
   <body>
+    <nav class="navbar  bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <i class="fa-sharp fa-solid fa-plus-minus fa-beat" style="color: #000000;"></i>
+        <b>CounterApplication</b>
+        </a>
+      </div>
+    </nav>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
